[project]
name = "cli_tools"
version = "0.2.4"
description = "Set of useful custom cli tools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
env-generator = "utils.interface:main"
one-file-generator = "utils.interface:main"
tree-generator = "utils.interface:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=5.11.5",
]
