[project]
name = "cli_tools"
version = "0.2.5"
description = "Set of useful custom cli tools"
authors = [{ name = "w1vern", email = "bndvvl@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
env-generator = "utils.interface:main"
one-file-generator = "utils.interface:main"
tree-generator = "utils.interface:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=5.11.5",
]
